# yolo

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: _lint-test.yaml  _validate-inference.yaml  ci.yaml  deploy.yaml  develop.yaml  docker.yaml  docs.yaml  integration.yaml  pr-checks.yaml  pr.yaml  release.yaml  version-check.yaml
0_get_start/0_quick_start/: index.html
0_get_start/1_introduction/: index.html
0_get_start/2_installations/: index.html
0_get_start/3_project_structure/: index.html
1_tutorials/0_allIn1/: index.html
1_tutorials/1_setup/: index.html
1_tutorials/2_buildmodel/: index.html
1_tutorials/3_dataset/: index.html
1_tutorials/4_train/: index.html
1_tutorials/5_inference/: index.html
2_model_zoo/0_object_detection/: index.html
3_custom/0_model/: index.html
3_custom/1_data_augment/: index.html
3_custom/2_loss/: index.html
3_custom/3_task/: index.html
4_deploy/1_deploy/: index.html
6_function_docs/0_model/: index.html
6_function_docs/1_data/: index.html
6_function_docs/2_training/: index.html
6_function_docs/3_detection/: index.html
6_function_docs/4_config/: index.html
6_function_docs/5_utils/: index.html
CONTRIBUTING/: index.html
HOWTO/: index.html
demo/: hf_demo.py
docker/: Dockerfile
docs/: CONTRIBUTING.md  HOWTO.md  index.md
docs/0_get_start/: 0_quick_start.md  1_introduction.md  2_installations.md  3_project_structure.md
docs/1_tutorials/: 0_allIn1.md  1_setup.md  2_buildmodel.md  3_dataset.md  4_train.md  5_inference.md
docs/2_model_zoo/: 0_object_detection.md  1_segmentation.md  2_classification.md
docs/3_custom/: 0_model.md  1_data_augment.md  2_loss.md  3_task.md
docs/4_deploy/: 1_deploy.md  2_onnx.md  3_tensorrt.md
docs/5_features/: 0_small_object.md  1_version_convert.md  2_IPython.md
docs/6_function_docs/: 0_model.md  0_solver.md  0_solver.rst  1_data.md  1_tools.md  2_module.md  2_training.md  3_config.md  3_config.rst  3_detection.md  4_config.md  4_dataloader.md  5_utils.md
examples/: sample_inference.py  sample_train.py
scripts/: compare_ema.py  plot_accumulation.py  plot_scheduler.py
search/: search_index.json
tests/: conftest.py  test.yaml
tests/test_model/: test_module.py  test_yolo.py
tests/test_tools/: test_data_augmentation.py  test_data_loader.py  test_dataset_preparation.py  test_drawer.py  test_loss_functions.py  test_solver.py
tests/test_utils/: test_bounding_box_utils.py  test_ema.py  test_module_utils.py  test_optim_utils.py
yolo/: __init__.py  __main__.py  cli.py  lazy.py
yolo/config/: config.py  config.yaml  export.yaml  general.yaml  infer.yaml
yolo/config/dataset/: mock.yaml
yolo/config/schemas/: data.py  model.py  task.py  training.py
yolo/config/task/: export.yaml  inference.yaml  train.yaml  validation.yaml
yolo/data/: dataset.py  helper.py  loader.py
yolo/deploy/: __init__.py  export.py  factory.py  protocol.py
yolo/deploy/backends/: onnx.py  torch.py  trt.py
yolo/model/: builder.py
yolo/model/blocks/: __init__.py  backbone.py  basic.py  implicit.py  neck.py
yolo/tasks/: registry.py
yolo/tasks/classification/: head.py
yolo/tasks/detection/: head.py  loss.py  postprocess.py  solver.py
yolo/tasks/segmentation/: head.py
yolo/tools/: data_loader.py  dataset_preparation.py  format_converters.py  solver.py
yolo/training/: callbacks.py  optim.py  solver.py
yolo/utils/: bounding_box_utils.py  dataset_utils.py  deploy_utils.py  drawer.py  format_converters.py  logger.py  logging_utils.py  model_utils.py  module_utils.py  optim_utils.py  runner_utils.py
